# local-subdomains

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: flake-check.yaml
src/: config.rs  hostname.rs  main.rs  server.rs  zones.rs
